# libp2p_global_chat_v3

./: Cargo.toml  README.md  Trunk.toml  index.html  libp2p_global_chat_v3.js  libp2p_global_chat_v3_bg.wasm  worker.js  worker_bg.wasm
assets/: sw.js
src/: main.rs
