[package]
name = "libp2p_global_chat_v3"
version = "0.1.0"
authors = ["lele"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.86"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

#[lib]
# crate-type = ["cdylib"]

[dependencies]
egui = "0.31"
egui_extras = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.69"
libp2p = { version = "0.55", features = [ "ed25519", "macros", "ping", "wasm-bindgen"] }
libp2p-webrtc-websys = "0.4"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3", features = [
    'Document', 
    'Element', 
    'HtmlElement', 
    'Node', 
    'Response', 
    'Window', 
    'Worker',
    'DedicatedWorkerGlobalScope',
    'Url',
] }
# gloo-worker = "0.5"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
